--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Anshuman's Resume</title>
     </head>
     <body>
-        <h1><u>Anshuman Katyan Jha</u></h1>
+        <h1><em>Anshuman Katyan Jha</em></h1>
         <img src="./Assets/Photo_AKJ.jpg" style="width:125px;" alt="Profile Photo">
         <hr>
 
